<resources>
    <string name="app_name">BMIcalculator</string>

    <!-- On Board Screen  -->
    <string name="onboard_title1">Selamat Datang di BMI Calculator</string>
    <string name="onboard_description">Temukan cara mudah untuk menghitung Indeks Massa Tubuh (BMI) Anda. Dengan aplikasi ini, Anda bisa mengetahui status kesehatan tubuh Anda dan mendapatkan rekomendasi untuk mencapai berat badan ideal.</string>
    <string name="onboard_btn">Mulai Sekarang</string>

    <!--  Popup Form  -->
    <string name="popup_title">Yuk, Kenalan Dulu!</string>
    <string name="popup_description">Masukkan nama Anda, dan kami akan membantu menghitung BMI Anda.</string>
    <string name="popup_btn">Lanjutkan</string>

    <!--  Home Page  -->
    <string name="tv_headline">Selamat datang di halaman utama!</string>
    <string name="btn_man">Man</string>
    <string name="btn_woman">Woman</string>

    <!-- Man Fragment -->
    <string name="tv_description_count">Untuk menghitung BMI Anda, kami memerlukan dua informasi penting: tinggi badan dan berat badan. Yuk, input data Anda untuk mengetahui status kesehatan tubuh!</string>
    <string name="tv_detail_page_man">Anda berada di Halaman Laki-laki</string>
    <string name="tv_detail_page_woman">Anda berada di Halaman Perempuan</string>

    <!--  Count Page  -->
    <string name="btn_count">Hitung</string>
    <string name="tv_height">Input height (cm)</string>
    <string name="tv_weigth">Input weight (kg)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: RESULT PAGE -->
    <string name="tv_label_height">Tinggi (cm)</string>
    <string name="tv_value_height">180</string>
    <string name="tv_label_weight">Berat (kg)</string>
    <string name="tv_value_weight">80</string>

    <string name="tv_label_bmi_result">BMI kamu adalah</string>
    <string name="tv_value_bmi_result">20,2</string>

    <string name="tv_result_motivation">Mari hidup sehat!</string>


</resources>