<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ResultFragment"
    android:background="@color/white">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/result_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chart"
        style="@style/SpaceElementHorizontal"
        android:layout_marginTop="-13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView2"
        android:elevation="2dp">

        <TextView
            android:id="@+id/tv_text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="2dp"
            android:fontFamily="@font/poppins_custom"
            android:text="BMI untuk"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_type"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Laki-laki"
            app:layout_constraintStart_toEndOf="@id/tv_text_type"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/poppins_custom"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_category_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_type"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_custom"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_label_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_height"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_result"
            android:layout_marginStart="20dp"
            style="@style/Result.TextView.Label" />

        <TextView
            android:id="@+id/tv_value_height"
            style="@style/Result.TextView.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tv_value_height"
            app:layout_constraintStart_toEndOf="@+id/tv_label_height"
            app:layout_constraintTop_toTopOf="@+id/tv_label_height" />

        <TextView
            android:id="@+id/tv_label_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_label_weight"
            style="@style/Result.TextView.Label.MarginEnd"
            app:layout_constraintEnd_toStartOf="@+id/tv_value_weight"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_result" />

        <TextView
            android:id="@+id/tv_value_weight"
            style="@style/Result.TextView.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/tv_value_weight"
            app:layout_constraintEnd_toEndOf="@+id/tv_category_result"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@+id/tv_label_weight" />

        <TextView
            android:id="@+id/tv_label_bmi_result"
            style="@style/Result.TextView.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_bmi_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_height"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tv_value_bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_value_bmi_result"
            style="@style/Result.TextView.Label"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_label_bmi_result"
            app:layout_constraintTop_toTopOf="@+id/tv_label_bmi_result" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>