<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@android:color/white"

    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_popup_title"
            android:fontFamily="@font/poppins_custom"
            android:textFontWeight="600"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/popup_title"
            android:textAlignment="textStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_popup_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:justificationMode="inter_word"
            android:text="@string/popup_description"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_popup_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_form_name"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:fontFamily="@font/poppins_custom"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Nama Anda"
            app:counterEnabled="true"
            app:boxStrokeColor="@color/stroke_btn"
            app:hintTextColor="@color/stroke_btn"
            app:counterMaxLength="30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_popup_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_text"
                android:layout_width="match_parent"
                android:maxLength="30"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit_form_name"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_custom"
            style="@style/BtnForm"
            android:textFontWeight="500"
            android:textSize="15sp"
            android:text="@string/popup_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_form_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>